# b64py

./: README.md  b64.py  pyproject.toml
b64/: __init__.py
tests/: testDecode.py  testEncode.py
